# api/src/contact/contact.controller.ts
@@ -1,0 +1,13 @@
+import { Body, Controller, Post } from '@nestjs/common';
+import { ContactService } from './contact.service';
+import { CreateContactMessageDto } from './dto/create-contact-message.dto';
+
+@Controller('contact')
+export class ContactController {
+  constructor(private readonly contactService: ContactService) {}
+
+  @Post()
+  createMessage(@Body() payload: CreateContactMessageDto) {
+    return this.contactService.createMessage(payload);
+  }
+}
